--- a/map.html
+++ b/map.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <div id="map"></div>
-  <script src="./map.js"></script>
+  <script src="./map/map.js"></script>
 </body>
 </html>
