Split map into its own class

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <title>NUS Business</title>
 </head>
 <body>
-  <h1>NUS Business</h1>
+  <div class="overlay intro-overlay">
+    <h1>NUS Business</h1>
+    <button type="button" id="locate">Let's Go!</button>
+  </div>
 
-  <button type="button" id="locate">Let's Go!</button>
+  <div class="overlay" id="map"></div>
 
   <script src="./index.js"></script>
 </body>
