Add prettier and babel class transform

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>NUS Business</title>
-</head>
-<body>
-  <div class="overlay intro-overlay">
-    <h1>NUS Business</h1>
-    <button type="button" id="locate">Let's Go!</button>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>NUS Business</title>
+  </head>
+  <body>
+    <div class="overlay intro-overlay">
+      <h1>NUS Business</h1>
+      <button type="button" id="locate">Let's Go!</button>
+    </div>
 
-  <div class="overlay" id="map"></div>
+    <div class="overlay" id="map"></div>
 
-  <script src="./index.js"></script>
-</body>
+    <script src="./index.js"></script>
+  </body>
 </html>
