Add results and scaffold filters

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 
     <div class="overlay" id="map"></div>
 
+    <div id="sidebar">
+      <div>
+        <label><input type="checkbox" value="male" /> Male</label>
+        <label><input type="checkbox" value="female" /> Female</label>
+        <label><input type="checkbox" value="handicapped" /> Handicapped</label>
+      </div>
+      <ul id="list"></ul>
+    </div>
+
     <script src="./index.js"></script>
   </body>
 </html>
