--- a/index.html
+++ b/index.html
@@ -5,21 +5,7 @@
     <title>NUS Business</title>
   </head>
   <body>
-    <div class="overlay intro-overlay">
-      <h1>NUS Business</h1>
-      <button type="button" id="locate">Let's Go!</button>
-    </div>
-
-    <div class="overlay" id="map"></div>
-
-    <div id="sidebar">
-      <div>
-        <label><input type="checkbox" value="male" /> Male</label>
-        <label><input type="checkbox" value="female" /> Female</label>
-        <label><input type="checkbox" value="handicapped" /> Handicapped</label>
-      </div>
-      <ul id="list"></ul>
-    </div>
+    <div id="app"></div>
 
     <script src="./index.js"></script>
   </body>
