--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>NUS Business</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
