--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NUS Business</title>
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700"
