--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
     <title>NUS Business</title>
+    <meta name="title" content="NUS Business">
+    <meta name="description" content="Find your closest business centres in NUS with NUS Business! We cater to your business, no matter how big or small. Your business is our business.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://nusbusiness.com/">
+    <meta property="og:title" content="NUS Business">
+    <meta property="og:description" content="Find your closest business centres in NUS with NUS Business! We cater to your business, no matter how big or small. Your business is our business.">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://nusbusiness.com/">
+    <meta property="twitter:title" content="NUS Business">
+    <meta property="twitter:description" content="Find your closest business centres in NUS with NUS Business! We cater to your business, no matter how big or small. Your business is our business.">
+
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700"
       rel="stylesheet"
-    />
+      />
   </head>
   <body>
     <div id="app"></div>
